--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@
 /firmware/alce-osd.X/nbproject/Package-*
 /firmware/alce-osd.X/build/default/
 /firmware/alce-osd.X/dist/default/
+/firmware/bootloader_updater.X/nbproject/private/
+/firmware/bootloader_updater.X/nbproject/Makefile-*
+/firmware/bootloader_updater.X/nbproject/Package-*
+/firmware/bootloader_updater.X/build/default/
+/firmware/bootloader_updater.X/dist/default/
 
