win_tool: Move widget stuff to its own class
Some mavlink experiments included in the commit

--- a/software/windows_config_tool/AlceOSD.csproj
+++ b/software/windows_config_tool/AlceOSD.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>AlceOSDconfigForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ByteArrayUtil.cs" />
+    <Compile Include="Widgets.cs" />
     <Compile Include="Comm.cs" />
     <Compile Include="FrameworkBitConverter.cs" />
     <Compile Include="mav.generated.cs" />
